# auto-delivery-bot

./: main.py  main_bot.py  pyproject.toml  render.yaml  requirements.txt  users.csv
